--- a/lw4/task2/index.html
+++ b/lw4/task2/index.html
@@ -11,37 +11,47 @@
 
 <body>
   <div class="container">
-    <div class="list">
-      <div class="list-date"></div>
-      <div class="list-content">
-        <div class="list-content-item">
-          <div class="list-content-item_checkbox list-content-item_checkbox--checked"></div>
-          <div class="list-content-item_text list-content-item_text--checked">Morning run</div>
-          <div class="list-content-item_time list-content-item_time--checked">7:30</div>
+    <div class="todo-list">
+      <div class="todo-list-date">
+        <p class="todo-list-date_next">
+          &#60;</p>
+        <div class="todo-list-date-text">
+          <p class="todo-list-date-text_day">MONDAY,</p>
+          <p class="todo-list-date-text_mounth">March 14th</p>
         </div>
-        <div class="list-content-item">
-          <div class="list-content-item_checkbox list-content-item_checkbox--checked"></div>
-          <div class="list-content-item_text list-content-item_text--checked">Meeting</div>
-          <div class="list-content-item_time list-content-item_time--checked">11:20</div>
+        <div class="todo-list-date_prev">
+          &#62;</div>
+      </div>
+      <div class="todo-list-content">
+        <div class="todo-list-content-item todo-list-content-item--checked">
+          <div class="todo-list-content-item_checkbox todo-list-content-item_checkbox--checked">&#10003;</div>
+          <div class="todo-list-content-item_text todo-list-content-item_text--checked">Morning run</div>
+          <div class="todo-list-content-item_time todo-list-content-item_time--checked">7:30</div>
         </div>
-        <div class="list-content-item">
-          <div class="list-content-item_checkbox list-content-item_checkbox--checked"></div>
-          <div class="list-content-item_text list-content-item_text--checked">Lunch with Mike</div>
-          <div class="list-content-item_time list-content-item_time--checked">12:00</div>
+        <div class="todo-list-content-item">
+          <div class="todo-list-content-item_checkbox"></div>
+          <div class="todo-list-content-item_text">Meeting</div>
+          <div class="todo-list-content-item_time">11:20</div>
         </div>
-        <div class="list-content-item">
-          <div class="list-content-item_checkbox list-content-item_checkbox--checked"></div>
-          <div class="list-content-item_text list-content-item_text--checked">Pay bills</div>
-          <div class="list-content-item_time list-content-item_time--checked">ALL DAY</div>
+        <div class="todo-list-content-item">
+          <div class="todo-list-content-item_checkbox"></div>
+          <div class="todo-list-content-item_text">Lunch with Mike</div>
+          <div class="todo-list-content-item_time">12:00</div>
         </div>
-        <div class="list-content-item">
-          <div class="list-content-item_checkbox list-content-item_checkbox--checked"></div>
-          <div class="list-content-item_text list-content-item_text--checked">Renew gym membership</div>
-          <div class="list-content-item_time list-content-item_time--checked">ALL DAY</div>
+        <div class="todo-list-content-item">
+          <div class="todo-list-content-item_checkbox"></div>
+          <div class="todo-list-content-item_text">Pay bills</div>
+          <div class="todo-list-content-item_time">ALL DAY</div>
+        </div>
+        <div class="todo-list-content-item">
+          <div class="todo-list-content-item_checkbox"></div>
+          <div class="todo-list-content-item_text">Renew gym membership</div>
+          <div class="todo-list-content-item_time">ALL DAY</div>
         </div>
       </div>
-      <div class="list-footer">
-
+      <div class="todo-list-footer">
+        <p class="todo-list-footer_total">4 TASKS</p>
+        <div class="todo-list-footer_button">ADD NEW <span class="todo-list-footer_button-item">+</span></div>
       </div>
     </div>
   </div>
